--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,8 +31,18 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	animation: fadeInAnimation ease 3s; 
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards;
 }
-
+@keyframes fadeInAnimation { 
+	0% { 
+		opacity: 0; 
+	} 
+	100% { 
+		opacity: 1; 
+	} 
+} 
 ol, ul {
 	list-style: none;
 }
